crates/squawk_parser/src/snapshots/parser__test__alter_role_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/alter_role.sql
---
SOURCE_FILE
  COMMENT "-- with_options"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    IDENT "superuser"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- all_options"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE "\n  "
    WITH_KW "with"
    WHITESPACE " "
    IDENT "superuser"
    WHITESPACE "\n  "
    IDENT "nosuperuser"
    WHITESPACE "\n  "
    IDENT "nosuperuser"
    WHITESPACE "\n  "
    IDENT "createdb"
    WHITESPACE "\n  "
    IDENT "nocreatedb"
    WHITESPACE "\n  "
    IDENT "createrole"
    WHITESPACE "\n  "
    IDENT "nocreaterole"
    WHITESPACE "\n  "
    INHERIT_KW "inherit"
    WHITESPACE "\n  "
    IDENT "noinherit"
    WHITESPACE "\n  "
    IDENT "login"
    WHITESPACE "\n  "
    IDENT "nologin"
    WHITESPACE "\n  "
    IDENT "replication"
    WHITESPACE "\n  "
    IDENT "noreplication"
    WHITESPACE "\n  "
    IDENT "bypassrls"
    WHITESPACE "\n  "
    IDENT "nobypassrls"
    WHITESPACE "\n  "
    CONNECTION_KW "connection"
    WHITESPACE " "
    LIMIT_KW "limit"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "100"
    WHITESPACE "\n  "
    ENCRYPTED_KW "encrypted"
    WHITESPACE " "
    PASSWORD_KW "password"
    WHITESPACE " "
    LITERAL
      STRING "'foo'"
    WHITESPACE "\n  "
    PASSWORD_KW "password"
    WHITESPACE " "
    LITERAL
      STRING "'bar'"
    WHITESPACE " "
    PASSWORD_KW "password"
    WHITESPACE " "
    NULL_KW "null"
    WHITESPACE "\n  "
    VALID_KW "valid"
    WHITESPACE " "
    UNTIL_KW "until"
    WHITESPACE " "
    LITERAL
      STRING "'2042-02-22'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE " "
    RENAME_KW "rename"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    NAME
      IDENT "newname"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_config"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "param"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'value'"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "param"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    LITERAL
      STRING "'value'"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "param"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    DEFAULT_KW "default"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_config_from_current"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "param"
    WHITESPACE " "
    FROM_KW "from"
    WHITESPACE " "
    CURRENT_KW "current"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_config"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE " "
    RESET_KW "reset"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "param"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_all"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE " "
    RESET_KW "reset"
    WHITESPACE " "
    ALL_KW "all"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- in_database"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    IDENT "r"
    WHITESPACE " "
    IN_KW "in"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    NAME_REF
      IDENT "d"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "param"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    LITERAL
      STRING "'value'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- using_current_user"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    IDENT "nologin"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- for_all_roles"
  WHITESPACE "\n"
  ALTER_ROLE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    ROLE_KW "role"
    WHITESPACE " "
    ALL_KW "all"
    WHITESPACE " "
    RESET_KW "reset"
    WHITESPACE " "
    ALL_KW "all"
  SEMICOLON ";"
  WHITESPACE "\n\n"
