crates/squawk_parser/src/snapshots/parser__test__alter_sequence_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/alter_sequence.sql
---
SOURCE_FILE
  COMMENT "-- full"
  WHITESPACE "\n"
  ALTER_SEQUENCE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "foo"
      DOT "."
      PATH_SEGMENT
        NAME_REF
          IDENT "s"
    WHITESPACE "\n  "
    AS_KW "as"
    WHITESPACE " "
    CHAR_TYPE
      VARCHAR_KW "varchar"
      L_PAREN "("
      ARG_LIST
        ARG
          LITERAL
            INT_NUMBER "100"
        R_PAREN ")"
    WHITESPACE "\n  "
    INCREMENT_KW "increment"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "2"
    WHITESPACE "\n  "
    MINVALUE_KW "minvalue"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "1"
    WHITESPACE "\n  "
    NO_KW "no"
    WHITESPACE " "
    MINVALUE_KW "minvalue"
    WHITESPACE "\n  "
    MAXVALUE_KW "maxvalue"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "100"
    WHITESPACE "\n  "
    NO_KW "no"
    WHITESPACE " "
    MAXVALUE_KW "maxvalue"
    WHITESPACE "\n  "
    START_KW "start"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE "\n  "
    START_KW "start"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE "\n  "
    RESTART_KW "restart"
    WHITESPACE "\n  "
    RESTART_KW "restart"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE "\n  "
    RESTART_KW "restart"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE "\n  "
    CACHE_KW "cache"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE "\n  "
    NO_KW "no"
    WHITESPACE " "
    CYCLE_KW "cycle"
    WHITESPACE "\n  "
    CYCLE_KW "cycle"
    WHITESPACE "\n  "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "foo"
      DOT "."
      PATH_SEGMENT
        NAME_REF
          IDENT "c"
    WHITESPACE "\n  "
    OWNED_KW "owned"
    WHITESPACE " "
    BY_KW "by"
    WHITESPACE " "
    NONE_KW "none"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_logged"
  WHITESPACE "\n"
  ALTER_SEQUENCE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "s"
    WHITESPACE "\n  "
    SET_KW "set"
    WHITESPACE " "
    LOGGED_KW "logged"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_SEQUENCE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "s"
    WHITESPACE "\n  "
    SET_KW "set"
    WHITESPACE " "
    UNLOGGED_KW "unlogged"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner_to"
  WHITESPACE "\n"
  ALTER_SEQUENCE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "s"
    WHITESPACE "\n  "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  ALTER_SEQUENCE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "s"
    WHITESPACE "\n  "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_SEQUENCE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "s"
    WHITESPACE "\n  "
    RENAME_KW "rename"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    NAME
      IDENT "t"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- schema"
  WHITESPACE "\n"
  ALTER_SEQUENCE_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SEQUENCE_KW "sequence"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "s"
    WHITESPACE "\n  "
    SET_KW "set"
    WHITESPACE " "
    SCHEMA_KW "schema"
    WHITESPACE " "
    NAME_REF
      IDENT "x"
  SEMICOLON ";"
  WHITESPACE "\n\n"
