crates/squawk_parser/src/snapshots/parser__test__alter_server_err.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/err/alter_server.sql
---
SOURCE_FILE
  COMMENT "-- missing option"
  WHITESPACE "\n"
  ALTER_SERVER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SERVER_KW "server"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
  SEMICOLON ";"
  WHITESPACE "\n"
---
ERROR@32: expected ALTER SERVER option
